--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ img {
     width:100%;
 }
 
+.narrow-image {
+    width:20%;
+}
+
 .header {
     background-image:url('/img/texture.jpg');
     text-shadow: 0px 2px 5px black;
