Change widths of two column layout
I'm going to change the whole site to two column layout (the only page that actually uses all three columns is the `cv.html` and it doesn't look great) so this commit changes it to be more how I would like it to look.

The only page using the two column layout at the moment is `etc.html`.

--- a/style.css
+++ b/style.css
@@ -146,12 +146,13 @@ p .pretty-code-sample {
 
 .left-2-column {
     float:left;
-    width: 45%;
+    width: 25%;
 }
 
 .right-2-column {
     float:right;
     width:50%;
+    margin-right: 20%;
 }
 
 .message-container {
