Create a header and footer include
Instead of having all the html in the default layout. This is a precursor to jekyll-ising the whole site, not just the blog.

--- a/_layouts/blog_layout.html
+++ b/_layouts/blog_layout.html
@@ -1,9 +1,11 @@
 ---
-layout: default
 ---
+
+{% include header.html %}
 <div class="left-2-column">
     {% include sidebar.html %}
 </div>
 <div class="right-2-column">
     {{ content }}
 </div>
+{% include footer.html %}
