Pass page name to header include
This means it can be used for other pages.

--- a/_layouts/blog_layout.html
+++ b/_layouts/blog_layout.html
@@ -1,7 +1,7 @@
 ---
 ---
 
-{% include header.html %}
+{% include header.html page_name="JFDI" %}
 <div class="left-2-column">
     {% include sidebar.html %}
 </div>
