Use new includes for redirect layout
This requires passing two additional variables, the canonical link and the meta refresh. They can't be passed in inline and aren't available in the front matter, so this uses a liquid capture block to assign them to variables. It does mean there are blank lines in all the other pages, but that is acceptable.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
       <link rel="shortcut icon" href="/favicon.ico" />
       <link rel="stylesheet" type="text/css" href="/style.css" />
       <link rel="alternate" type="application/x.atom+xml" title="RSS feed for this site" href="/atom.xml" />
+      {{ include.canonical_link }}
+      {{ include.meta_refresh }}
   </head>
   <body>
     <div class="header">
