--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -5,6 +5,6 @@
 
 {% include header.html canonical_link=canonical_link meta_refresh=meta_refresh %}
     <h1>Redirecting...</h1>
-      <a href="{{ page.redirect_to }}">Click here if you are not redirected.</a>
+      <a href="{{ page.redirect_to }}">Click here if you are not redirected</a>
 </body>
 </html>
