Add viewport meta tag
Setting the initial scale to 1 here means that mobile browsers will set the viewport to the pixel width of the device being used; wihtout this tag they will just set it to 1024 pixels.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
 <html lang="en-GB">
   <head>
     <title>Anna Shipman{{ include.page_name }}</title>
+      <meta name="viewport" content="initial-scale=1">
       <link rel="shortcut icon" href="/favicon.ico" />
       <link rel="stylesheet" type="text/css" href="/style.css" />
       <link rel="alternate" type="application/x.atom+xml" title="RSS feed for this site" href="/atom.xml" />
