Make embedded iframes responsive
The code you copy from YouTube or Slideshare to embed video/slides into your website has a fixed height and width which means when included on the page it shrinks everything else to allow the embedded item to be displayed full width.

This change adds some CSS to handle these embedded items and removes the fixed heights and widths.

--- a/style.css
+++ b/style.css
@@ -159,3 +159,19 @@ p .pretty-code-sample {
 .message-container {
     margin: 50px;
 }
+
+.embedded {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+    overflow:hidden;
+}
+
+.embedded iframe, .embedded object, .embedded embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
