Only use two columns if the page is >= 700px wide
The `@media` rule is used to define different rules for different media types/devices (http://www.w3schools.com/cssref/css3_pr_mediaquery.asp). This setting is min-width so means, in practice, that desktop browsers will get the two column layout but anything smaller, like a mobile, will not get the CSS within the braces.

--- a/style.css
+++ b/style.css
@@ -144,16 +144,19 @@ p .pretty-code-sample {
     border-bottom: 1px dotted #333;
 }
 
-.left-2-column {
-    float:left;
-    width: 20%;
-    padding: 0 1% 0 1%;
-}
 
-.right-2-column {
-    float:right;
-    width:46%;
-    margin-right: 27%;
+@media (min-width: 700px) {
+  .left-2-column {
+      float:left;
+      width: 20%;
+      padding: 0 1% 0 1%;
+  }
+
+  .right-2-column {
+      float:right;
+      width:46%;
+      margin-right: 27%;
+  }
 }
 
 .message-container {
