Remove 2 from style name
`left-2-column` and `right-2-column` referred to the name of the style when there was also a 3 column layout. There isn't now, so the 2 is redundant and possibly confusing.

It's still useful to have the position of the column in the name, especially now they may appear in the source in a different order.

--- a/_layouts/blog_layout.html
+++ b/_layouts/blog_layout.html
@@ -2,10 +2,10 @@
 ---
 
 {% include header.html page_name=" : JFDI" %}
-<div class="left-2-column">
+<div class="left-column">
     {% include sidebar.html %}
 </div>
-<div class="right-2-column">
+<div class="right-column">
     {{ content }}
 </div>
 {% include footer.html %}
