Move blog layout contents to blog post layout
The blog post layout is no longer going to inherit from the blog layout as the columns are going to appear in a different order and that's pretty much all that's going on in the blog layout. This commit moves the contents of blog layout to here.

A later commit will reformat but leaving this like this to be clear what has changed.

--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -1,8 +1,16 @@
 ---
-layout: blog_layout
 ---
+
+{% include header.html page_name=" : JFDI" %}
+<div class="left-column">
+    {% include sidebar.html %}
+</div>
+<div class="right-column">
 <div id="{{ page.anchor_id }}" class="blog-post">
 <h1>{{ page.title}}</h1>
 <date>{{ page.date | date_to_long_string }}</date>
   {{ content }}
 </div>
+
+</div>
+{% include footer.html %}
