--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ h1, h2 {
     font-family: "Andale Mono", "Courier New", Courier, monospace;
     font-size: 14px;
     padding: 10px;
+    overflow-x: auto;
 }
 
 .code-sample-inline {
