Update blog post & add sign-up footer
Final draft of blog post and add a footer to all posts. It doesn't look great, CSS to be improved later.

--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -9,6 +9,7 @@
     <date>{{ page.date | date_to_long_string }}</date>
       {{ content }}
   </div>
+  {% include mailinglist.html %}
 </div>
 
 <div class="left-column">
