--- a/_includes/mailinglist.html
+++ b/_includes/mailinglist.html
@@ -15,10 +15,10 @@
         <label for="mce-EMAIL">Email Address </label>
         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
       </div>
-      <div class="mc-field-group input-group">
+      <div class="mc-field-group input-group" style="min-height: 0px;">
         <strong>Email Format </strong>
         <input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0" checked><label for="mce-EMAILTYPE-0">HTML</label>
-          <input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">Plain text</label>
+        <input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">Plain text</label>
       </div>
       <div id="mce-responses" class="clear">
         <div class="response" id="mce-error-response" style="display:none"></div>
