Add margin to code block
This means that when a blog post finishes with a code block (e.g. https://www.annashipman.co.uk/jfdi/awk.html), there is white space after it and before the horizontal line that divides posts, so it's visually clearer that one post had finished and the next has started.

--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ h1, h2 {
     background-color: #deebf5;
     font-family: "Andale Mono", "Courier New", Courier, monospace;
     font-size: 14px;
+    margin: 16px 0;
     padding: 10px;
     overflow-x: auto;
 }
