Change bottom from line to dotted margin

--- a/_includes/mailinglist.html
+++ b/_includes/mailinglist.html
@@ -1,4 +1,4 @@
-<div>
+<div class="mailing-list-box">
 <p class="mailing-list">If you’d like to be notified when I publish a new post, and possibly receive very occasional announcements, sign up to my mailing list:</p>
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -32,5 +32,3 @@
 </div>
 
 </div>
-
-<hr>
