Alter wording slightly

--- a/_includes/mailinglist.html
+++ b/_includes/mailinglist.html
@@ -1,5 +1,5 @@
 <div class="mailing-list-box">
-<p class="mailing-list">If you’d like to be notified when I publish a new post, and possibly receive very occasional announcements, sign up to my mailing list:</p>
+<p class="mailing-list">If you’d like to be notified when I publish a new post, and possibly receive occasional announcements, sign up to my mailing list:</p>
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
     #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
