--- a/style.css
+++ b/style.css
@@ -69,10 +69,17 @@ img {
 }
 
 h1, h2 {
-    font-size: 24px;
     padding-bottom: 10px;
     line-height: 100%;
     margin: 30px 0 0 0;
+}
+
+h1 {
+    font-size: 32px;
+}
+
+h2 {
+    font-size: 24px;
 }
 
 .link-group{
