Pull out speaking into a separate page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
           <tr>
             <td><a href="/jfdi.html" class="header-text">JFDI</a></td>
             <td><a href="/cv.html" class="header-text">CV</a></td>
+            <td><a href="/speaking.html" class="header-text">Speaking</a></td>
             <td><a href="/etc.html" class="header-text">Etc</a></td>
           </tr>
         </table>
