Make sidebars consistent
I added the blog subtitle only to the JFDI page, so when you go into a post it disappears. This corrects that.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,6 @@
 <ul>
+
+<h2>Writing about tech, leadership and tech leadership</h2>
 {% for post in site.posts %}
 <li><a href="{{post.url}}">{{ post.title}}</a>
 <date>{{ post.date | date_to_long_string }}</date></li>
