--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -7,6 +7,16 @@
   <div id="{{ page.anchor_id }}" class="blog-post">
     <h1>{{ page.title}}</h1>
     <date>{{ page.date | date_to_long_string }}</date>
+    {% if post %}
+      {% assign tags = post.tags %}
+    {% else %}
+      {% assign tags = page.tags %}
+    {% endif %}
+    {% for tag in tags %}
+      / <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{tag}}</a>
+    {% unless forloop.last %}&nbsp;{% endunless %}
+    {% endfor %}
+
       {{ content }}
   </div>
   {% include mailinglist.html %}
