Make tag link to correct place on page
The URL is a little ugly, would be better if it wasn't `tags.html` I think, but not a huge deal right now.

--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -13,7 +13,7 @@
       {% assign tags = page.tags %}
     {% endif %}
     {% for tag in tags %}
-      / <a href="{{site.baseurl}}/tags/#{{tag|slugize}}">{{tag}}</a>
+      / <a href="{{site.baseurl}}/tags.html#{{tag|slugize}}">{{tag}}</a>
     {% unless forloop.last %}&nbsp;{% endunless %}
     {% endfor %}
 
