Add mailing list to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
             <td><a href="/etc.html" class="header-text">Etc</a></td>
           </tr>
         </table>
+        <a href="https://mailchi.mp/819c19b20f3e/sign-up-to-anna-shipmans-mailing-list" class="header-text twitter">Sign up to my mailing list</a>
         <a href="http://www.twitter.com/annashipman" class="header-text twitter">Follow me on Twitter</a>
       </div>
     </div>
