Change 'twitter' style name now not only twitter

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ p .pretty-code-sample {
       margin-right: 27%;
   }
 
-  .twitter{
+  .follow{
       float:right;
       padding-right: 10px;
       font-size:0.9em;
