Rename sidebar to posts list
Because that's what it is

--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="left-column">
-    {% include sidebar.html %}
+    {% include posts_list.html %}
 </div>
 
 {% include footer.html %}
