--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ h2 {
     padding: 5px 15px 15px 15px;
 }
 
+.conference-name {
+    font-style: italic;
+}
+
 .quote {
     font-style: italic;
     background: #dee;
