--- a/_includes/posts_list.html
+++ b/_includes/posts_list.html
@@ -1,8 +1,11 @@
 <ul>
 
-<h2>All posts</h2>
-{% for post in site.posts %}
+<h2>Archive</h2>
+<a href="/archive.html">See all posts by date or category</a>.
+<h3>Recent posts</h3>
+{% for post in site.posts limit:10 %}
 <li><a href="{{post.url}}">{{ post.title}}</a>
 <date>{{ post.date | date_to_long_string }}</date></li>
 {% endfor %}
+More in the <a href="/archive.html">archive</a>.
 </ul>
