Create a style for posts list
And remove the `blog-post` style from the list. Also, change 'category' to 'tag' though I'm really not sure about this, category is more correct in English, tag is more accurate given that categories also exist in Jekyll...

--- a/style.css
+++ b/style.css
@@ -165,6 +165,11 @@ p .pretty-code-sample {
     border-bottom: 1px dotted #333;
 }
 
+.posts-list a{
+    color: black;
+    font-weight: bold;
+}
+
 
 @media (min-width: 700px) {
   .left-column {
