Add metatags for mediacard etc

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,13 @@
   <head>
     <title>Anna Shipman{{ include.page_name }}</title>
       <meta name="viewport" content="initial-scale=1, shrink-to-fit=no">
+      <meta name="title" content="Anna Shipman">
+      <meta name="description" content="Strategic technology leader">
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://www.annashipman.co.uk/">
+      <meta property="og:title" content="Anna Shipman">
+      <meta property="og:description" content="Strategic technology leader">
+      <meta property="og:image" content="https://www.annashipman.co.uk/img/mediacard.jpeg">
       <link rel="shortcut icon" href="/favicon.ico" />
       <link rel="stylesheet" type="text/css" href="/style.css" />
       <link rel="alternate" type="application/x.atom+xml" title="RSS feed for this site" href="/atom.xml" />
