--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,9 @@
       <link rel="shortcut icon" href="/favicon.ico" />
       <link rel="stylesheet" type="text/css" href="/style.css" />
       <link rel="alternate" type="application/x.atom+xml" title="RSS feed for this site" href="/atom.xml" />
+      {% if page.canonical_url %}
+        <link rel="canonical" href="{{ page.canonical_url }}">
+      {% endif %}
       {{ include.canonical_link }}
       {{ include.meta_refresh }}
   </head>
